# antmaxxing

./: .pre-commit-config.yaml  MAINTAINING.md  README.md  main.py  pyproject.toml
antmaxxing/: __init__.py  __main__.py  operations.py
antmaxxing/continuus_problem/: all_works.ipynb
antmaxxing/continuus_problem/results/early_tests/rastrigin/: dynamic_ants30_evap0.1_b15_seed0.csv  dynamic_ants30_evap0.1_b15_seed1.csv  dynamic_ants30_evap0.1_b15_seed2.csv  dynamic_ants30_evap0.1_b50_seed0.csv  dynamic_ants30_evap0.1_b50_seed1.csv  dynamic_ants30_evap0.1_b50_seed2.csv  pheroparticle_ants30_evap0.05_p100_d0.3_seed0.csv  pheroparticle_ants30_evap0.05_p100_d0.3_seed1.csv  pheroparticle_ants30_evap0.05_p100_d0.3_seed2.csv  pheroparticle_ants30_evap0.05_p200_d0.3_seed0.csv  pheroparticle_ants30_evap0.05_p200_d0.3_seed1.csv  pheroparticle_ants30_evap0.05_p200_d0.3_seed2.csv  static_ants30_evap0.1_b15_seed0.csv  static_ants30_evap0.1_b15_seed1.csv  static_ants30_evap0.1_b15_seed2.csv  static_ants30_evap0.1_b50_seed0.csv  static_ants30_evap0.1_b50_seed1.csv  static_ants30_evap0.1_b50_seed2.csv
antmaxxing/continuus_problem/results/early_tests/rosenbrock/: dynamic_ants30_evap0.1_b15_seed0.csv  dynamic_ants30_evap0.1_b15_seed1.csv  dynamic_ants30_evap0.1_b15_seed2.csv  pheroparticle_ants30_evap0.05_p100_d0.3_seed0.csv  pheroparticle_ants30_evap0.05_p100_d0.3_seed1.csv  pheroparticle_ants30_evap0.05_p100_d0.3_seed2.csv  (+3 more)
discrete/: ant_colony.py  dual_pheromone_tsp.py  tsp_problem.py
scripts/: check.sh  fix.sh
tests/: __init__.py  test_operations.py
(+261 files in other folders)
