[project]
name = "antmaxxing"
version = "0.1.0"
description = "Official AntMaxxing package"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[[package]]
name = "antmaxxing"
version = "0.1.0"
source = { virtual = "." }

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812"]

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]
